--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,20 @@ version: '3.9'
 services:
   nginx:
     image: nginx:latest
-    restart: always
-    container_name: nginx
     ports:
       - 80:80
+      - 443:443
+    restart: always
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      bridge-net:
-        ipv4_address: 172.28.0.2
-    depends_on:
-      - keycloak
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www/:/var/www/certbot/:ro
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+
   mariadb:
     image: mariadb
     restart: always
@@ -26,16 +29,13 @@ services:
       - 3306:3306
     volumes:
       - ./mariadb:/var/lib/mysql
-    networks:
-      bridge-net:
-        ipv4_address: 172.28.0.3
 
   keycloak:
     image: quay.io/keycloak/keycloak:latest
     restart: always
-    container_name: keycloak
+    container_name: keycloak.jfa.app.br
     environment:
-      KC_HOSTNAME: 172.28.0.4
+      KC_HOSTNAME: 
       KC_HOSTNAME_PORT: 8080
       KC_HOSTNAME_STRICT_BACKCHANNEL: "true"
       KC_DB: mariadb
@@ -46,19 +46,8 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_HEALTH_ENABLED: "true"
       KC_LOG_LEVEL: info
-    command: start-dev
+    command: start
     ports:
       - 8080:8080
     depends_on:
       - mariadb
-    networks:
-      bridge-net:
-        ipv4_address: 172.28.0.4
-networks:
-  bridge-net:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 172.28.0.0/16
-          gateway: 172.28.0.1
